--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -21,5 +21,7 @@
 
 <ng-container *ngIf="folder === 'carreras'">
     <app-carrera *ngFor="let carrera of carreras" [carrera]="carrera"></app-carrera>
+    <app-footer></app-footer>
   </ng-container>
 </ion-content>
+
