--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -19,9 +19,21 @@
     <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 
-<ng-container *ngIf="folder === 'carreras'">
-    <app-carrera *ngFor="let carrera of carreras" [carrera]="carrera"></app-carrera>
+<ion-grid>
+  <ng-container *ngIf="folder === 'carreras'">
+    <ng-container *ngFor="let carrera of carreras; let i = index">
+      <ion-row *ngIf="i % 2 === 0">
+        <ion-col size="12" sizeMd="6">
+          <app-carrera [carrera]="carreras[i]"></app-carrera>
+        </ion-col>
+        <ion-col size="12" sizeMd="6" *ngIf="carreras[i + 1]">
+          <app-carrera [carrera]="carreras[i + 1]"></app-carrera>
+        </ion-col>
+      </ion-row>
+    </ng-container>
     <app-footer></app-footer>
   </ng-container>
+</ion-grid>
+
 </ion-content>
 
