--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -3,37 +3,40 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
+    <ion-title>{{ folder | titlecase }}</ion-title>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
+      <ion-title size="large">{{ folder | titlecase }}</ion-title> <!-- Lo vamos a poner con la primera en mayúscula-->
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <!-- Esto es para el fondo de cada apartado -->
+    <!-- <div id="container">
+      <strong class="capitalize" >{{ folder }}</strong>
+      <p><a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"></a></p>
+    </div> -->
 
-<ion-grid>
-  <ng-container *ngIf="folder === 'carreras'">
-    <ng-container *ngFor="let carrera of carreras; let i = index">
-      <ion-row *ngIf="i % 2 === 0">
-        <ion-col size="12" sizeMd="6">
-          <app-carrera [carrera]="carreras[i]"></app-carrera>
-        </ion-col>
-        <ion-col size="12" sizeMd="6" *ngIf="carreras[i + 1]">
-          <app-carrera [carrera]="carreras[i + 1]"></app-carrera>
-        </ion-col>
-      </ion-row>
+  <!-- Esto es lo que se va a mostrar en el menú carreras -->
+  <ion-grid>
+    <ng-container *ngIf="folder === 'carreras'">
+      <ng-container *ngFor="let carrera of carreras; let i = index">
+        <ion-row class="ion-justify-content-center" *ngIf="i % 2 === 0">
+          <ion-col size="12" size-md="6" size-sm="4">
+            <app-carrera [carrera]="carreras[i]"></app-carrera>
+          </ion-col>
+          <ion-col size="12" size-md="6" size-sm="4" *ngIf="carreras[i + 1]">
+            <app-carrera [carrera]="carreras[i + 1]"></app-carrera>
+          </ion-col>
+        </ion-row>
+      </ng-container>
+      <app-footer></app-footer>
     </ng-container>
-    <app-footer></app-footer>
-  </ng-container>
-</ion-grid>
+  </ion-grid>
 
 </ion-content>
 
