--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,10 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
+// Importamos la funente Montserrat
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 /**
  * Ionic Dark Mode
  * -----------------------------------------------------
