--- a/src/app/components/formulario-modal/formulario-modal.component.html
+++ b/src/app/components/formulario-modal/formulario-modal.component.html
@@ -21,46 +21,46 @@
       label= "Descripción"
       label-placement="floating"
       placeholder="Breve Descripción de la carrera"
-      [(ngModel)]=" nuevaCarrera.descripcion"></ion-input>
+      [(ngModel)]="nuevaCarrera.descripcion"></ion-input>
   </ion-item>
   <ion-item>
     <ion-input
       label= "Fecha"
       label-placement="floating"
       placeholder="Fecha de la carrera"
-      [(ngModel)]=" nuevaCarrera.fecha"></ion-input>
+      [(ngModel)]="nuevaCarrera.fecha"></ion-input>
   </ion-item>
   <ion-item>
     <ion-input
       label= "Ubicación"
       label-placement="floating"
       placeholder="¿Dónde es la carrera?"
-      [(ngModel)]=" nuevaCarrera.ubicacion"></ion-input>
+      [(ngModel)]="nuevaCarrera.ubicacion"></ion-input>
   </ion-item>
   <ion-item>
     <ion-input
       label= "Distancia(km)"
       label-placement="floating"
       placeholder="Distancia de la carrera (km)"
-      [(ngModel)]=" nuevaCarrera.distanciaKm"></ion-input>
+      [(ngModel)]="nuevaCarrera.distanciaKm"></ion-input>
   </ion-item>
   <ion-item>
     <ion-input
       label= "Desnivel Positivo"
       label-placement="floating"
       placeholder="Desnivel Positivo de la carrera (m)"
-      [(ngModel)]=" nuevaCarrera.desnivelPositivo"></ion-input>
+      [(ngModel)]="nuevaCarrera.desnivelPositivo"></ion-input>
   </ion-item>
   <ion-item>
     <ion-input
       label= "Cartel"
       label-placement="floating"
       placeholder="Cartel o imágen de la carrera"
-      [(ngModel)]=" nuevaCarrera.imagenUrl"></ion-input>
+      [(ngModel)]="nuevaCarrera.imagenUrl"></ion-input>
   </ion-item>
   
 </ion-list>
 
-<ion-button expand="block" (click)="agregarCarrera()" shape="shape" class="ion-margin-top ion-margin-bottom">
+<ion-button expand="block" (click)="agregarCarrera()" class="ion-margin-top ion-margin-bottom">
   Añadir Carrera
 </ion-button>
