--- a/src/app/components/formulario-modal/formulario-modal.component.html
+++ b/src/app/components/formulario-modal/formulario-modal.component.html
@@ -61,6 +61,10 @@
   
 </ion-list>
 
-<ion-button expand="block" (click)="agregarCarrera()" class="ion-margin-top ion-margin-bottom">
-  Añadir Carrera
+<ion-button expand="block" color="success" (click)="guardar()" class="ion-margin-top ion-margin-bottom">
+  Guardar
+</ion-button>
+
+<ion-button expand="block" color="medium" (click)="cancelar()" class="ion-margin-top ion-margin-bottom">
+  Cancelar
 </ion-button>
