--- a/src/app/components/carrera/carrera.component.scss
+++ b/src/app/components/carrera/carrera.component.scss
@@ -9,4 +9,11 @@ ion-card {
   display: flex;
   flex-direction: column;
   height: 100%;
+  // Le damos duración a los cambios en la propiedad transform
+  transition: transform 0.2s ease-in-out;
+}
+
+// Cuando se pase el cursor por encima se agranda un 4%
+ion-card:hover {
+  transform: scale(1.04);
 }
