--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -23,11 +23,54 @@
 <!-- Lo que se mmuestra en la página carreras -->
 <ion-grid>
   <ng-container *ngIf="folder === 'carreras'">
+
+    <!-- SKELETON: visible mientras 'cargando' es true -->
+    <ion-grid *ngIf="cargando">
+      <ion-row class="ion-justify-content-center">
+        <!-- Repite 4 skeleton cards -->
+        <ion-col size="12" size-md="6" *ngFor="let i of [1,2,3,4]">
+          <ion-card color="primary">
+            <!-- Imagen skeleton (barra grande) -->
+            <div style="height: 180px; overflow: hidden;">
+              <ion-skeleton-text [animated]="true" style="width: 100%; height: 100%; display: block;"></ion-skeleton-text>
+            </div>
+
+            <ion-card-header>
+              <ion-card-title>
+                <ion-skeleton-text [animated]="true" style="width: 60%;"></ion-skeleton-text>
+              </ion-card-title>
+            </ion-card-header>
+
+            <ion-card-content>
+              <ion-list>
+                <ion-item lines="none">
+                  <ion-label>
+                    <ion-skeleton-text [animated]="true" style="width: 90%;"></ion-skeleton-text>
+                  </ion-label>
+                </ion-item>
+                <ion-item lines="none">
+                  <ion-label>
+                    <ion-skeleton-text [animated]="true" style="width: 70%;"></ion-skeleton-text>
+                  </ion-label>
+                </ion-item>
+                <ion-item lines="none">
+                  <ion-label>
+                    <ion-skeleton-text [animated]="true" style="width: 50%;"></ion-skeleton-text>
+                  </ion-label>
+                </ion-item>
+              </ion-list>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <!-- Contenido real -->
     <ion-row class="ion-justify-content-center">
       <ng-container *ngFor="let carrera of listaDeCarreras; let i = index">
         <ion-col size="12" size-md="6">
           <ion-card color="primary">
-            <ion-card-header>
+            <ion-card-header #tarjetaExterna>
               <ion-card-title>{{ carrera.titulo }}</ion-card-title>
             </ion-card-header>
             <ion-card-content>
