--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -73,7 +73,7 @@
             <ion-card-header #tarjetaExterna>
               <ion-card-title>{{ carrera.titulo }}</ion-card-title>
             </ion-card-header>
-            <ion-card-content>
+            <ion-card-content #tarjetaExterna>
               <app-carrera [carrera]="carrera"></app-carrera>
             </ion-card-content>
           </ion-card>
