--- a/src/app/pages/ajustes/ajustes.page.html
+++ b/src/app/pages/ajustes/ajustes.page.html
@@ -1,29 +1,18 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <!-- Botón para volver a la Home -->
-      <ion-back-button defaultHref="/folder"></ion-back-button>
-    </ion-buttons>
     <ion-title>Ajustes</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <!-- Header colapsable para iOS -->
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Ajustes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-
-  <!-- Nuestra lista de configuración -->
   <ion-list>
     <ion-list-header>Apariencia</ion-list-header>
+
     <ion-item>
       <ion-label>Modo Oscuro</ion-label>
-      <!-- Enlazamos el toggle con una variable y escuchamos el cambio -->
       <ion-toggle [(ngModel)]="modoOscuro" (ionChange)="cambiarModoOscuro()"></ion-toggle>
     </ion-item>
   </ion-list>
+
 </ion-content>
