--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -68,8 +68,16 @@
 	// Font Family
 	--ion-font-family: 'Montserrat';
 
-	color-scheme:light;
+	// Modo claro:
+	--ion-background-color: #ffffff;
+  	--ion-text-color: #000000;
 
+}
+
+// Modo oscuro
+:root.dark {
+  --ion-background-color: #000000;
+  --ion-text-color: #ffffff;
 }
 
 .alert-guardar .alert-wrapper {
@@ -81,25 +89,25 @@
 
 /* src/theme/variables.scss */
 
-/* 1. Definimos un "grupo" de estilos reutilizable (mixin) */
-@mixin dark-theme-variables {
-  --ion-color-primary: #52796f;
-  --ion-color-primary-rgb: 82,121,111;
-  --ion-color-primary-contrast: #ffffff;
+// /* 1. Definimos un "grupo" de estilos reutilizable (mixin) */
+// @mixin dark-theme-variables {
+//   --ion-color-primary: #52796f;
+//   --ion-color-primary-rgb: 82,121,111;
+//   --ion-color-primary-contrast: #ffffff;
   
-  --ion-background-color: #121212;
-  --ion-text-color: #ffffff;
-  /* ... resto de variables ... */
-}
-
-// /* 2. Lo aplicamos para detección automática (Sistema) */
-// @media (prefers-color-scheme: dark) {
-//   body {
-//     @include dark-theme-variables;
-//   }
+//   --ion-background-color: #121212;
+//   --ion-text-color: #ffffff;
+//   /* ... resto de variables ... */
 // }
 
-/* 3. Lo aplicamos para activación manual (Clase .dark) */
-body.dark {
-  @include dark-theme-variables;
-}
+// // /* 2. Lo aplicamos para detección automática (Sistema) */
+// // @media (prefers-color-scheme: dark) {
+// //   body {
+// //     @include dark-theme-variables;
+// //   }
+// // }
+
+// /* 3. Lo aplicamos para activación manual (Clase .dark) */
+// body.dark {
+//   @include dark-theme-variables;
+// }
