--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -17,16 +17,7 @@
 
   <!-- Lo que se muestra en la pagina inicio  -->
   <ng-container *ngIf="folder === 'inicio'">
-
-    <ion-toolbar color="primary">
-      <ion-title>About</ion-title>
-      <ion-buttons slot="end">
-        <!-- Este botón navega a la ruta '/about' -->
-        <ion-button routerLink="/about">
-          <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-    </ion-toolbar>
+    
   </ng-container>
 
   <!-- Lo que se mmuestra en la página carreras -->
@@ -114,7 +105,7 @@
   </ion-card>
 </ng-container>
 
-<!-- AJUSTES -->
+<!-- AJUSTES
 <ng-container *ngIf="folder === 'ajustes'">
   <p>DEBUG: folder = {{ folder }}</p>
   <ion-list>
@@ -127,4 +118,4 @@
   </ion-list>
 </ng-container>
 
-</ion-content>
+</ion-content> -->
