--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -70,7 +70,7 @@
       </ion-grid>
 
       <!-- Contenido real -->
-      <ion-row class="ion-justify-content-center">
+      <ion-row class="ion-justify-content-center equal-height-row">
         <ng-container *ngFor="let carrera of listaDeCarreras; let i = index">
           <ion-col size="12" size-md="6">
             <ion-card color="primary">
