--- a/src/app/pages/detalle-carrera/detalle-carrera.page.scss
+++ b/src/app/pages/detalle-carrera/detalle-carrera.page.scss
@@ -59,6 +59,7 @@
   ion-chip {
     margin: 0;
     font-weight: 600;
+
     // Esto asegura que el texto se vea bien
     ion-label {
       color: currentColor;
@@ -71,6 +72,7 @@
     font-weight: bold;
     margin-top: 20px;
   }
+
   p {
     line-height: 1.6;
     color: var(--ion-color-step-600);
@@ -82,4 +84,42 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+}
+
+@media (min-width: 900px) {
+  .layout {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "poster info";
+    gap: 30px;
+    padding: 20px;
+    align-items: start;
+  }
+
+  .poster-container {
+    grid-area: poster;
+    min-height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+
+    img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      border-radius: 12px;
+    }
+  }
+
+  .info-wrapper {
+    grid-area: info;
+    display: flex;
+    justify-content: flex-start;
+
+    .details-card {
+      width: 100%;
+      max-width: 550px;
+      margin: 0;
+    }
+  }
 }
