--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,39 @@
           }
         </ion-list>
       </ion-content>
+
+      <div class="menu-bottom-content">
+        <ion-card class="profile-card" routerLink="/folder/ajustes">
+          <ion-card-content>
+            <div class="profile-header">
+              <ion-avatar>
+                <img src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+              </ion-avatar>
+              <div class="profile-info">
+                <h2>Usuario Trail</h2>
+                <p>Nivel Experto</p>
+              </div>
+            </div>
+            
+            <div class="profile-stats">
+              <div class="stat">
+                <span class="value">12</span>
+                <span class="label">Carreras</span>
+              </div>
+              <div class="stat">
+                <span class="value">450km</span>
+                <span class="label">Distancia</span>
+              </div>
+            </div>
+
+            <ion-button expand="block" fill="clear" size="small" color="primary">
+              Ver perfil completo
+            </ion-button>
+          </ion-card-content>
+        </ion-card>
+      </div>
+      
+
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
