--- a/src/app/pages/ajustes/ajustes.page.html
+++ b/src/app/pages/ajustes/ajustes.page.html
@@ -23,5 +23,4 @@
       <ion-input [(ngModel)]="nombreUsuario" (ionBlur)="guardarNombre()" placeholder="Escribe tu nombre"> </ion-input> 
     </ion-item> 
   </ion-list>
-
-<!-- </ion-content> -->
+  <app-footer></app-footer>
